# autoX32

./: .gitignore  Makefile  Makefile.am  Makefile.in  README.md  aclocal.m4  config.h  config.h.in  config.status  configure  configure.ac  convert_css.sh  convert_glade.sh  convert_images.sh  de.paraair.autoX32.gschema.xml  valgrind.conf
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1  traces.2
data/: CmdList.glade  autoX32.css  autoX32.desktop  connectDlg.glade  main.glade  main.glade.1  main.glade~  timeview.glade  trackdlg.glade  trackview.glade
nbproject/: configurations.xml  project.xml
nbproject/private/: Default.properties  configurations.xml  private.xml
src/: IOBackend.h  IOEngine.h  IOMainWnd.h  IOProject.h  IOTimeView.h  IOTimer.h  IOTrackStore.h  IOTrackView.h  IOTracksLayout.h  IOX32.h  OAlsa.cpp  OAlsa.h  OBackend.cpp  OConfig.cpp  OConfig.h  OConnectDlg.cpp  OConnectDlg.h  OCustomWidget.cpp  OCustomWidget.h  ODAW.cpp  ODAW.h  ODlgLayout.cpp  ODlgLayout.h  ODlgPrefs.cpp  ODlgPrefs.h  ODlgProlog.h  OEngine.cpp  OEngine.h  OJack.cpp  OJack.h  OMainWnd.cpp  OMainWnd.h  OMainWndEvents.cpp  OMainWndProcess.cpp  OMainWndUI.cpp  OMidiMtc.cpp  OOverView.cpp  OOverView.h  OPlayHead.cpp  OPlayHead.h  (+34 more)
src/.deps/: autoX32-OConnectDlg.Po  autoX32-ODAW.Po  autoX32-OMainWnd.Po  autoX32-OMainWndEvents.Po  autoX32-OMainWndUI.Po  autoX32-OOverView.Po  autoX32-OProject.Po  autoX32-OTimeDraw.Po  autoX32-OTimeStore.Po  autoX32-OTimeView.Po  autoX32-OTrackDlg.Po  autoX32-OTrackDraw.Po  autoX32-OTrackEditDlg.Po  autoX32-OTrackStore.Po  autoX32-OTrackView.Po  autoX32-OTracksLayout.Po  autoX32-OX32.Po  autoX32-OscCmd.Po  autoX32-OscConnection.Po  autoX32-OscPath.Po  autoX32-autoX32.Po
src/backend/: IOBackend.h  IOCacheCallbackHandler.h  IODawHandler.h  IOJackHandler.h  IOMessageHandler.h  IOMixer.h  IOscMessage.h  ISerializer.h  OAlsa.cpp  OAlsa.h  OBackend.cpp  OCallbackHandler.cpp  OCallbackHandler.h  ODAW.cpp  ODAW.h  OJack.cpp  OJack.h  OMidiMtc.cpp  OMidiMtc.h  OX32.cpp  OX32.h  OscCache.cpp  OscCache.h  OscCmd.cpp  OscCmd.h  OscCmd_sav.h  OscMessage.cpp  OscMessage.h  OscValue.cpp  OscValue.h
src/dlg/: OConnectDlg.cpp  OConnectDlg.h  ODlgLayout.cpp  ODlgLayout.h  ODlgPrefs.cpp  ODlgPrefs.h  ODlgProlog.cpp  ODlgProlog.h  OTrackDlg.cpp
src/embedded/: CmdList.h  autoX32.h  autoX32_css.cpp  autoX32_css.h  connectDlg.cpp  connectDlg.h  cut_off.h  cut_on.h  go_start.h  lock_playhead.h  lock_playhead_off.h  main.cpp  main.h  play_off.h  rec_off.h  teach_on.h  timeview.h  touch_off.h  touch_on.h  trackdlg.cpp  trackdlg.h  trackview.cpp  trackview.h  zoom_loop.h
src/res/: OResource.h  autoX32_css.cpp  connectDlg.cpp  connectDlg.h  go_end.h  go_start.h  lock_playhead_on.h  loop_end.h  loop_start.h  main.cpp  main.h  play_on.h  rec_on.h  teach_off.h  timeview.cpp
src/ui/: IOMainWnd.h  IOThinWnd.h  IOTrackView.h  IOTracksLayout.h  OCustomWidget.cpp  OCustomWidget.h  OMainWnd.cpp  OMainWnd.h  OMainWndEvents.cpp  OMainWndProcess.cpp  OMainWndProcessBackend.cpp  OMainWndProcessMixer.cpp  OMainWndUI.cpp  OOverView.cpp  OOverView.h  OPlayHead.cpp  OPlayHead.h  OThinWnd.cpp  OThinWnd.h  OTimeDraw.cpp  OTimeDraw.h  OTimeView.cpp  OTimeView.h  OTrackDraw.cpp  OTrackDraw.h  OTrackDrawBase.cpp  OTrackDrawBase.h  OTrackDrawThin.cpp  OTrackDrawThin.h  OTrackSizer.cpp  OTrackSizer.h  OTrackView.cpp  OTrackView.h  OTracksLayout.cpp  OTracksLayout.h  autoX32_UI.cpp
src/utils/: IOTimerEvent.h  OConfig.cpp  OConfig.h  OQueue.cpp  OQueue.h  OTimer.cpp  OTimer.h
tests/: test_OscCmd.cpp  test_trackstore.cpp
